--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
     "from graph import m_b_trace, trace_values, plot\n",
     "\n",
     "regression_trace = m_b_trace(1.417, 133.33, budgets)\n",
-    "scatter_trace = trace_values(budgets, revenues)\n",
+    "scatter_trace = trace_values(budgets, revenues, mode = )\n",
     "plot([regression_trace, scatter_trace])"
    ]
   },
