automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,7 @@
     "    return {'x': [x, x], 'y': [y, y_hat], 'mode': 'line', 'marker': {'color': 'red'}, 'name': name, 'text': [error_value], 'textposition':'right'}\n",
     "\n",
     "def error_line_traces(x_values, y_values, m, b):\n",
-    "    return go.scatter(list(map(lambda x_value: error_line_trace(x_values, y_values, m, b, x_value), x_values)))\n",
+    "    return go.Scatter(list(map(lambda x_value: error_line_trace(x_values, y_values, m, b, x_value), x_values)))\n",
     "\n",
     "errors = error_line_traces(budgets, revenues, 1.417, 133.33)\n",
     "plot([scatter_trace, regression_trace, *errors])"
